INCLUDES = -I../../../include/gui
lib_LTLIBRARIES = libtcodgui.la
libtcodgui_la_SOURCES = ../../../src/gui/button.cpp ../../../src/gui/container.cpp ../../../src/gui/flatlist.cpp ../../../src/gui/hbox.cpp \
			../../../src/gui/image.cpp ../../../src/gui/label.cpp ../../../src/gui/radiobutton.cpp ../../../src/gui/slider.cpp \
			../../../src/gui/statusbar.cpp ../../../src/gui/textbox.cpp ../../../src/gui/togglebutton.cpp \
			../../../src/gui/toolbar.cpp ../../../src/gui/vbox.cpp ../../../src/gui/widget.cpp

